Copy ICU data files in deb build
git-svn-id: file:///home/awy/mirror/slim/7.6/trunk/platforms@31720 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/rules
+++ b/debian/rules
@@ -70,6 +70,7 @@ install:
 	cp -r ${source}/SQL ${base}/${share}
 	cp -r ${source}/strings.txt ${base}/${share}
 	cp -r ${source}/MySQL ${base}/${share}
+	cp -r ${source}/icudt46*.dat ${base}/${share}
 
 
 	# We put the Plugins into /var/lib/ because they are modifiable, 
