Copy ICU data files for ReadyNAS builds, also reduce dependencies
git-svn-id: file:///home/awy/mirror/slim/7.6/trunk/platforms@31721 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/readynas/control
+++ b/readynas/control
@@ -10,10 +10,7 @@ Architecture: _ARCHTYPE_
 Conflicts: slimp3,slimserver,squeezecenter,squeezecenter-readynas
 Replaces: slimp3,slimserver,squeezecenter,squeezecenter-readynas
 Depends: perl (>= 5.8.1),
- mysql-server-4.1 | mysql-server-5.0, libmysqlclient15off,
- mysql-client-4.1 | mysql-client-5.0, flac, sox, adduser, libfreetype6,
- libgd2-noxpm, libmad0, libpng12-0, libvorbis0a, libvorbisenc2,
- libvorbisfile3, sox
+ flac, sox, adduser, libmad0, libvorbis0a, libvorbisenc2, libvorbisfile3
 Description: Streaming Audio Server
  Squeezebox Server is a cross-platform streaming server that supports a wide range
  of formats, including AAC, AIFF, FLAC, Ogg Vorbis, MP3, WAV, and WMA.
