update copyright notices & comments with new product name.
git-svn-id: file:///home/awy/mirror/slim/7.6/branches/lms/platforms@32539 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/readynas/rules
+++ b/readynas/rules
@@ -90,7 +90,7 @@ install:
 	## Overwrite some default settings with ReadyNas specific settings
 	cp -rf ${CURDIR}/readynas/custom-convert.conf ${base}/etc/squeezeboxserver
 
-	# Copy over the squeezecenter init script...
+	# Copy over the server init script...
 	cp -rf $(CURDIR)/readynas/squeezeboxserver.default ${base}/etc/default/squeezeboxserver
 	cp -rf $(CURDIR)/readynas/squeezeboxserver.init ${base}/etc/init.d/squeezeboxserver
 
