--- a/osx/Preference Pane/Installer.plist
+++ b/osx/Preference Pane/Installer.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>Installer</string>
 	<key>CFBundleGetInfoString</key>
-	<string>Squeezebox Server Installer 7.6.0, Copyright 2003-2011 Logitech</string>
+	<string>Logitech Media Server Installer 7.6.0, Copyright 2003-2011 Logitech</string>
 	<key>CFBundleIconFile</key>
 	<string>installer.icns</string>
 	<key>CFBundleIdentifier</key>
@@ -15,7 +15,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>7.6.0</string>
 	<key>CFBundleName</key>
-	<string>Squeezebox Server Installer</string>
+	<string>Logitech Media Server Installer</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
