can't simply rename the package name, it would automatically rename folders too
git-svn-id: file:///home/awy/mirror/slim/7.7/trunk/platforms@33119 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/control
+++ b/debian/control
@@ -1,14 +1,14 @@
-Source: logitechmediaserver
+Source: squeezeboxserver
 Section: sound
 Priority: optional
 Maintainer: Logitech/Slim Devices <debian@slimdevices.com>
 Build-Depends: debhelper (>= 4.0.0)
 Standards-Version: 3.6.2
 
-Package: logitechmediaserver
+Package: squeezeboxserver
 Architecture: all
-Conflicts: slimp3,slimserver,squeezecenter,squeezeboxserver
-Replaces: slimp3,slimserver,squeezecenter,squeezeboxserver
+Conflicts: slimp3,slimserver,squeezecenter
+Replaces: slimp3,slimserver,squeezecenter
 Depends: perl (>= 5.8.8), adduser
 Description: Streaming Audio Server
  Logitech Media Server is a cross-platform streaming media server that supports a wide range
