more renaming business - readynas
git-svn-id: file:///home/awy/mirror/slim/7.7/trunk/platforms@33121 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/readynas/control
+++ b/readynas/control
@@ -12,6 +12,6 @@ Replaces: slimp3,slimserver,squeezecenter,squeezecenter-readynas
 Depends: perl (>= 5.8.1),
  flac, sox, adduser, libmad0, libvorbis0a, libvorbisenc2, libvorbisfile3
 Description: Streaming Audio Server
- Squeezebox Server is a cross-platform streaming server that supports a wide range
+ Logitech Media Server is a cross-platform streaming server that supports a wide range
  of formats, including AAC, AIFF, FLAC, Ogg Vorbis, MP3, WAV, and WMA.
  .
