rename our data folder once again, to work around a bug in the ReadyNAS firmware, messing up its Samba configuration.
Bug: 17819
git-svn-id: file:///home/awy/mirror/slim/7.7/trunk/platforms@33755 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/readynas/rules
+++ b/readynas/rules
@@ -10,7 +10,7 @@ base=$(CURDIR)/readynas/$(package)
 share=usr/share/squeezeboxserver/
 source=$(CURDIR)/../server
 
-varlib=c/squeezeboxserver
+varlib=c/.squeezeboxserver
 
 clean:
 	dh_testdir
