Git conversion of LMS builds
Allow use of git as SCM when looking for revision.
Cope with absent Slim/Plugins directory (no empty dirs with git)

Change-Id: Iceaf914ddd89ea84afe59e3fbd341efc5452a544

--- a/debian/rules
+++ b/debian/rules
@@ -72,7 +72,7 @@ install:
 
 	# We put the Plugins into /var/lib/ because they are modifiable, 
 	# and shouldn't be put into /usr. 
-	cp -r ${source}/Plugins ${base}/${varlib}
+	cp -r ${source}/Plugins ${base}/${varlib} || mkdir ${base}/${varlib}/Plugins
 	ln -s /${varlib}/Plugins ${base}/${share}/Plugins
 
 	# Remove errmsg.sys files from the MySQL dir, since they may not match
