Fix bundle ID for OSX PrefPane
Change-Id: I8a4f1cf954a4bf0341a368fde1da1fe1292713cd

--- a/osx/Preference Pane/Info.plist
+++ b/osx/Preference Pane/Info.plist
@@ -11,11 +11,11 @@
 	<key>CFBundleIconFile</key>
 	<string>icon.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.slimdevices.slim</string>
+	<string>com.logitech.ueml</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>10.0.0</string>
 	<key>CFBundleName</key>
-	<string>Squeezebox</string>
+	<string>UE Smart Radio</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
