--- a/osx/Preference Pane/Launcher.plist
+++ b/osx/Preference Pane/Launcher.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFile</key>
 	<string>icon.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.slimdevices.slim</string>
+	<string>com.logitech.ueml</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>10.0.0</string>
 	<key>CFBundleName</key>
