--- a/osx/Preference Pane/Info.plist
+++ b/osx/Preference Pane/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>Squeezebox</string>
+	<string>UEMusicLibrary</string>
 	<key>CFBundleGetInfoString</key>
 	<string>UE Music Library 10.0.0, Copyright 2002-2012 Logitech</string>
 	<key>CFBundleIconFile</key>
