--- a/readynas/addon_template/addons.conf
+++ b/readynas/addon_template/addons.conf
@@ -1,1 +1,1 @@
-SQUEEZEBOX!!UE Music Library!!10.0.0!!/etc/frontview/addons/bin/SQUEEZEBOX/start.sh!!/etc/frontview/addons/bin/SQUEEZEBOX/stop.sh!!Other!!current_url==::detail_url==http://www.logitech.com/speakers_audio/wireless_music_systems::icon_url==/addons/SQUEEZEBOX/icon.png
+UEML!!UE Music Library!!10.0.0!!/etc/frontview/addons/bin/UEML/start.sh!!/etc/frontview/addons/bin/UEML/stop.sh!!Other!!current_url==::detail_url==http://www.logitech.com/speakers_audio/wireless_music_systems::icon_url==/addons/UEML/icon.png
