--- a/debian/rules
+++ b/debian/rules
@@ -93,9 +93,6 @@ install:
 	# Copy the revision file
 	cp ${source}/revision.txt ${base}/${share}
 
-	# lintian overrides file
-	cp $(CURDIR)/debian/lintian.overrides ${base}/usr/share/lintian/overrides/$(package)
-
 binary-indep: install
 	dh_testdir
 	dh_testroot
@@ -105,6 +102,7 @@ binary-indep: install
 	dh_installlogrotate
 	dh_installinit
 	dh_installman
+	dh_lintian
 	dh_compress
 	dh_fixperms
 	dh_installdeb
