--- a/debian/rules
+++ b/debian/rules
@@ -73,7 +73,6 @@ install:
 	# We put the Plugins into /var/lib/ because they are modifiable, 
 	# and shouldn't be put into /usr. 
 	cp -r ${source}/Plugins ${base}/${varlib} || mkdir ${base}/${varlib}/Plugins
-	ln -s /${varlib}/Plugins ${base}/${share}/Plugins
 
 	# Remove errmsg.sys files from the MySQL dir, since they may not match
 	# up with the installed version's
@@ -103,6 +102,7 @@ binary-indep: install
 	dh_installinit
 	dh_installman
 	dh_lintian
+	dh_link
 	dh_compress
 	dh_fixperms
 	dh_installdeb
