--- a/debian/rules
+++ b/debian/rules
@@ -28,26 +28,12 @@ binary-indep:
 	cp ${source}/License.txt $(CURDIR)/debian/copyright
 
 	dh_installdocs
-	dh_install
+	dh_install -X darwin -X freebsd -X MSWin -X sparc-linux -X PreventStandby -X errmsg
 
 	# Copy our server files to the appropriate Debian locations.
 	install -m0755 ${source}/slimserver.pl ${base}/usr/sbin/squeezeboxserver
 	install -m0755 ${source}/scanner.pl ${base}/usr/sbin/squeezeboxserver-scanner
 	install -m0755 ${source}/cleanup.pl ${base}/usr/sbin/squeezeboxserver-cleanup
-
-	# Remove non-Linux binary modules and binaries
-	rm -rf ${base}/${share}/CPAN/arch/*/darwin-thread-multi-2level
-	rm -rf ${base}/${share}/CPAN/arch/*/i386-freebsd-64int
-	rm -rf ${base}/${share}/CPAN/arch/*/sparc-linux
-	rm -rf ${base}/${share}/CPAN/arch/*/MSWin32-x86-multi-thread
-	rm -rf ${base}/${share}/Bin/darwin
-	rm -rf ${base}/${share}/Bin/MSWin32-x86-multi-thread
-	rm -rf ${base}/${share}/Bin/i386-freebsd-64int
-	rm -rf ${base}/usr/share/perl5/Slim/Plugin/PreventStandby
-
-	# Remove errmsg.sys files from the MySQL dir, since they may not match
-	# up with the installed version's
-	rm ${base}/${share}/MySQL/errmsg.*
 
 	dh_installlogrotate
 	dh_installinit
