--- a/debian/rules
+++ b/debian/rules
@@ -4,6 +4,7 @@
 
 # Uncomment this to turn on verbose mode.
 export DH_VERBOSE=1
+export DH_INTERNAL_BUILDFLAGS=1
 
 package=logitechmediaserver
 base=$(CURDIR)/debian/$(package)
