--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -17,7 +17,7 @@ RUN useradd squeezeboxserver && \
 	usermod -u 99 squeezeboxserver && \
 	usermod -g 100 squeezeboxserver && \
 	usermod -d /home squeezeboxserver && \
-	chown -R squeezeboxserver:users /home && \
+	chown -R squeezeboxserver:nogroup /home && \
 	usermod -a -G audio squeezeboxserver
 
 # Add startup script
