Add dependency on libcrypt-openssl-rsa-perl - Wanted by ShairTunes2W plugin
This change adds a dependency on package libcrypt-openssl-rsa-perl which
provides 'Crypt::OpenSSL::RSA'. This library is required by the popular
'ShairTunes2W - Airtunes on LMS' plugin.

Although not a dependency of LMS itself, the plugin is widely used.
Having the package automatically available simplifies installation of
the plugin.

--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Package: logitechmediaserver
 Architecture: all
 Conflicts: slimp3,slimserver,squeezecenter,squeezeboxserver
 Replaces: slimp3,slimserver,squeezecenter,squeezeboxserver
-Depends: ${misc:Depends}, perl (>= 5.10.0), adduser, libc6, libgcc1, libstdc++6, zlib1g, libio-socket-ssl-perl, ca-certificates
+Depends: ${misc:Depends}, perl (>= 5.10.0), adduser, libc6, libgcc1, libstdc++6, zlib1g, libio-socket-ssl-perl, ca-certificates, libcrypt-openssl-rsa-perl
 Pre-Depends: ${misc:Pre-Depends}
 Description: Streaming Audio Server
  Logitech Media Server is a cross-platform streaming media server that supports a wide range
