Try to fix more Logitech/Lyrion changes in the macOS preferences

--- a/osx/Preference Pane/Info.plist
+++ b/osx/Preference Pane/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>Squeezebox</string>
 	<key>CFBundleGetInfoString</key>
-	<string>Lyrion Music Server 9.0.0, Copyright 2002-2024 Logitech</string>
+	<string>Lyrion Music Server 9.0.0, Copyright 2002-2024 Logitech, 2024 Lyrion Community</string>
 	<key>CFBundleIconFile</key>
 	<string>icon.icns</string>
 	<key>CFBundleIdentifier</key>
