--- a/osx/Installer/Info.plist
+++ b/osx/Installer/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.logitech.music.Squeezebox</string>
+	<string>org.lyrion.music.Squeezebox</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>IFMajorVersion</key>
