--- a/debian/rules
+++ b/debian/rules
@@ -36,3 +36,6 @@ override_dh_install:
 	install -m0755 ${source}/scanner.pl ${base}/usr/sbin/squeezeboxserver-scanner
 	install -m0755 ${source}/cleanup.pl ${base}/usr/sbin/squeezeboxserver-cleanup
 	install -m0755 ${source}/gdresized.pl ${base}/usr/sbin/squeezeboxserver-resized
+
+override_dh_builddeb:
+	dh_builddeb -- -Zxz
